test/sema/invalid-operand-to-logical-not.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var foo = 42;
    // CHECK: [[@LINE+1]]:10: error: invalid operand type 'int' to logical not
    if (!foo) { }
}
